tests/cases/standard-library/ok/prelude/prelude-std-qualified-print.ari
use std as core;

fn main() -> i64 {
  var zone = zone::create(64);
  std::println("std root {}", 1);
  std::print("std print {}\n", 2);
  var plain = std::string::from(ref mut zone, "std io plain");
  std::io::println_string(ref plain).unwrap();
  core::println("std alias {}", 3);
  zone::destroy(zone);
  return 6;
}
